--- a/First/index.html
+++ b/First/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Booo</h1>
 	<p>About here we are</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<p><strong>Lorem ipsum</strong>dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
